src/components/Points/styles.module.css
@media (max-width: 899px) {
  .pageTitle {
    margin: 16px;
  }
}

.gradientText {
  background: linear-gradient(225deg, #5fddff 12.5%, #12ff80 88.07%);
  background-clip: text;
  color: transparent;
}

.barcode {
  position: absolute;
  bottom: 0;
  left: 50%;
  z-index: 1;
  transform: translate(-50%);
  pointer-events: none;
}

.chipSoon,
.chipActive,
.chipFinished {
  color: var(--mui-palette-background-paper);
  border-radius: 4px;
  height: 24px;
  margin-left: 8px;
  border: none;
  font-weight: 400;
  cursor: pointer;
}

.chipSoon {
  background-color: #696669;
}

.chipFinished {
  background-color: #a1a3a7;
}

.chipActive {
  background-color: var(--mui-palette-primary-main);
}

